# sim2sim

./: .env.example  .gitignore  .replit  LAUNCH.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/ai/: explainer.py
src/api/: middleware.py  routes.py  schemas.py
src/billing/: db.py  email.py  licenses.py  schemas.py  webhook.py
src/export/: excel.py  pdf.py
src/models/: inventory.py  optimization.py  queuing.py  simulation.py
static/: account.html  index.html  pricing.html
static/css/: billing.css  style.css
static/js/: account-page.js  api.js  app.js  charts.js  exports.js  license.js  pricing-cta.js  swagger-init.js
tests/: test_api.py  test_billing.py  test_exports.py  test_inventory.py  test_queuing.py
